fixed table overflow

--- a/src/styles/details.module.css
+++ b/src/styles/details.module.css
@@ -1,20 +1,20 @@
-main{
-    background-color: white;
-    border-radius: 1rem;
-    box-shadow: 0 0 10px white;
-    grid-column: 2/3;
-    grid-row: 1/3;
-    display: flex;
-    flex-flow: column nowrap;
-    color: #242424;
+main {
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0 0 10px white;
+  grid-column: 2/3;
+  grid-row: 1/3;
+  display: flex;
+  flex-flow: column nowrap;
+  color: #242424;
+  overflow: auto;
 }
 
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 5px 20px #242424;
-    padding: 1.5rem;
-    border-radius: 1rem 1rem 0 0;
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 5px 20px #242424;
+  padding: 1.5rem;
+  border-radius: 1rem 1rem 0 0;
 }
-
