--- a/src/styles/detailsNav.module.css
+++ b/src/styles/detailsNav.module.css
@@ -1,23 +1,21 @@
-.details-nav{
+.details-nav {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  align-items:center;
-  gap:1rem;
+  align-items: center;
+  gap: 1rem;
 
-  & > a{
+  & > a {
     color: black;
-    text-decoration:none;
+    text-decoration: none;
     padding: 0.2rem 0.4rem;
     border: 2px solid black;
     transition: all 0.2s ease-in-out;
 
-    &:hover{
+    &:hover {
       background-color: black;
-      color:white;
-       border: 2px solid #2B4570;
+      color: white;
+      border: 2px solid #2b4570;
     }
   }
 }
-
-
